# 2D-Game-Development

./: .gitignore  CMakeLists.txt  README.md  Zadanie 7 - kolizje.rar
Zadanie 1 - hello world/: CMakeLists.txt
Zadanie 10 - warstwy i tile/: CMakeLists.txt  Camera.cpp  Camera.h  Level.cpp  Level.h  ParallaxLayer.cpp  ParallaxLayer.h  Player.h  main.cpp
Zadanie 2 - poruszanie/: CMakeLists.txt  main.cpp
Zadanie 3 - poziomy/: CMakeLists.txt  level.txt  main.cpp
Zadanie 4 - kamera/: CMakeLists.txt  level.txt  main.cpp
Zadanie 5 - dwoch graczy/: CMakeLists.txt  main.cpp
Zadanie 6 - kolizje okregow/: CMakeLists.txt  main.cpp
Zadanie 7 - kolizje/: CMakeLists.txt  Camera.cpp  Camera.h  GameOverScreen.cpp  GameOverScreen.h  Level.cpp  Level.h  Player.cpp  Player.h  level1.txt  level2.txt  level3.txt  main.cpp
Zadanie 7 - kolizje/levels/: level1.txt  level2.txt  level3.txt
Zadanie 8 - skoki/: CMakeLists.txt  Camera.cpp  Player.cpp  Player.h  main.cpp
Zadanie 8 - skoki/levels/: level1.txt
Zadanie 9 - pixel art/: CMakeLists.txt  Camera.h  GameOverScreen.cpp  GameOverScreen.h  Level.cpp  Level.h  main.cpp
